--- a/translator-app.conf
+++ b/translator-app.conf
@@ -1,6 +1,6 @@
 [program:translator-app]
 directory=/opt/app/translator
-command=/opt/app/translator/scripts/translator-server start
+command=/opt/app/translator/scripts/translator-server.sh start
 autostart=true
 autorestart=true
 user=pythonapp
